--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,12 +17,20 @@ jobs:
       - name: installing commonspeak2 wordlists
         run: |
             wget -m -nd -A  "httparchive_subdomains_*"  https://wordlists-cdn.assetnote.io/data/automated/
+            declare -a array
+            array+=(httparchive_subdomains_*)
+            head -1000 ${array[-1]} >> wordlist1000.txt
+            head -10000 ${array[-1]} >> wordlist10000.txt
+            head -100000 ${array[-1]} >> wordlist100000.txt
       - name: commit Wordlists
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           if [ $(git status --porcelain=v1 2>/dev/null | wc -l) != "0" ]; then
-              git add "httparchive_subdomains_*"
+              git add ${array[-1]}
+              git add wordlist1000.txt
+              git add wordlist10000.txt
+              git add wordlist100000.txt
               git commit -m "Remote version change" -a
               git push "https://${GITHUB_ACTOR}:${TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:${GITHUB_REF} --follow-tags
           fi
