--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,15 +19,16 @@ jobs:
             wget -m -nd -A  "httparchive_subdomains_*"  https://wordlists-cdn.assetnote.io/data/automated/
             declare -a array
             array+=(httparchive_subdomains_*)
-            head -1000 array[-1] >> wordlist1000.txt
-            head -10000 array[-1] >> wordlist10000.txt
-            head -100000 array[-1] >> wordlist100000.txt
+            newestwordlist=${array[-1]}
+            head -1000 $newestwordlist >> wordlist1000.txt
+            head -10000 $newestwordlist >> wordlist10000.txt
+            head -100000 $newestwordlist >> wordlist100000.txt
       - name: commit Wordlists
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           if [ $(git status --porcelain=v1 2>/dev/null | wc -l) != "0" ]; then
-              git add ${array[-1]}
+              git add $newestwordlist
               git add wordlist1000.txt
               git add wordlist10000.txt
               git add wordlist100000.txt
