--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,6 +20,7 @@ jobs:
             declare -a array
             array+=(httparchive_subdomains_*)
             newestwordlist=${array[-1]}
+            cat $newestwordlist >> NewestWordlist.txt
             head -1000 $newestwordlist >> wordlist1000.txt
             head -10000 $newestwordlist >> wordlist10000.txt
             head -100000 $newestwordlist >> wordlist100000.txt
@@ -28,7 +29,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           if [ $(git status --porcelain=v1 2>/dev/null | wc -l) != "0" ]; then
-              git add $newestwordlist
+              git add NewestWordlist.txt
               git add wordlist1000.txt
               git add wordlist10000.txt
               git add wordlist100000.txt
